# caf_hackathon_2026

./: Drug Discovery Demo.ipynb  Drug Discovery With Better Viz.ipynb  OpenMM Demo.ipynb  README.md  Tutorial.ipynb  drug_discovery_demo.ipynb  drug_discovery_notes.md  drug_visualize.py  pyproject.toml
