[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caf-hackathon-examples"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "globus-compute-sdk",
    "academy-py==0.4.0",
    "matplotlib",
    "ipykernel",
    "rdkit",
    "openmm",
    "openmmforcefields",
    "mdanalysis",
    "nglview",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langchain>=1.2.8",
]