[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caf-hackathon-examples"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "academy-py==0.4.0",
    "cairocffi",
    "cairosvg",
    "globus-compute-sdk==4.9.0",
    "ipykernel",
    "langchain>=1.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "matplotlib",
    "mdanalysis",
    "nglview",
    "openmm==8.5.0",
    "openmmforcefields==0.15.1",
    "cairosvg",
    "cairocffi",
    "rdkit",
]